5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1667_2970.log
== TEST (2019-04-16 16:34:09) 
-- CODE:
#Digitar as variaveis de entrada
Qf=1000042.00
Q0=1500.00

t=int(input("Quanto tempo em meses: "))

i=float((Qf/Q0**(1/t)))

if i <= 0.01:
	escreva = Real

else:
	escreva = Irreal

print(float(round(i, 5)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    escreva = Irreal
NameError: name 'Irreal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:56) 
-- CODE:
#Digitar as variaveis de entrada
Qf=1000042.00
Q0=1500.00

t=int(input("Quanto tempo em meses: "))

i=float((Qf/Q0**(1/t)))

if i <= 0.01:
	escreva = Real

else:
	escreva = Irreal

print(float(round(i, 5)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    escreva = Irreal
NameError: name 'Irreal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:41) 
-- CODE:
#Digitar as variaveis de entrada
Qf=1000042.00
Q0=1500.00

t=int(input("Quanto tempo em meses: "))

i=float((Qf/Q0**(1/t)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    escreva = Irreal
NameError: name 'Irreal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:55) 
-- CODE:
t=int(input("Quanto tempo em meses?: "))
#Digitar as variaveis de entrada
Qf=1000042.00
Q0=1500.00

i=float((Qf/Q0**(1/t)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    escreva = Irreal
NameError: name 'Irreal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:23) 
-- CODE:
t=int(input("Quanto tempo em meses?: "))
#Digitar as variaveis de entrada
Qf=1000042.00
Q0=1500.00

i=((Qf/Q0**(1/t)))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    escreva = Irreal
NameError: name 'Irreal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:49) 
-- CODE:
t=int(input("Quanto tempo em meses?: "))
#Digitar as variaveis de entrada
Qf=1000042.00
Q0=1500.00

i=((Qf/Q0**(1/t)))

print (i)


-- OUTPUT:
988988.7549160966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:24) 
-- CODE:
t=int(input("Quanto tempo em meses?: "))
#Digitar as variaveis de entrada
Qf=1000042.00
Q0=1500.00

i=((Qf/Q0)**(1/t)))

print (i)


-- ERROR:
File "XXXX", line 6
    i=((Qf/Q0)**(1/t)))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:40) 
-- CODE:
t=int(input("Quanto tempo em meses?: "))
#Digitar as variaveis de entrada
Qf=1000042.00
Q0=1500.00

i=(Qf/Q0**(1/t))

print (i)


-- OUTPUT:
988988.7549160966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:39:20) 
-- CODE:
t=int(input("Quanto tempo em meses?: "))
#Digitar as variaveis de entrada
Qf=1000042.00
Q0=1500.00

i=(Qf/Q0**(1/t))-1

print (i)


-- OUTPUT:
988987.7549160966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:39:27) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000042.00
Q0=1500.00

i=(Qf/Q0**(1/t))-1

print (i)


-- OUTPUT:
988987.7549160966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:46) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1042000.00
Q0=1500.00

i=(Qf/Q0**(1/t))-1

print (i)

-- OUTPUT:
1030482.0023364745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:45) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1042000.00
Q0=1500.00

i=(Qf/Q0**(1/t))-1

print (i)

-- OUTPUT:
1030482.0023364745
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:43) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000.00
Q0=1500.00

i=(Qf/Q0**(1/t))-1

print (i)

-- OUTPUT:
988946.2191328929
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:10) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000.00 + 42000.00
Q0=1500.00

i=(Qf/Q0**(1/t))-1

if i <= 0.01:
 	imprima = Real

else:
	imprima = Irreal

print (imprima)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    imprima = Irreal
NameError: name 'Irreal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:47:41) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000.00 + 42000.00
Q0=1500.00

i=(Qf/Q0**(1/t))-1

if i <= 0.01:
 	imprima = Real

else:
	imprima = Irreal

print (imprima)

-- EXECUTION TIME:
0.131759
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2970/main.py", line 12, in <module>
    imprima = Irreal
NameError: name 'Irreal' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:06) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000.00 + 42000.00
Q0=1500.00

i=(Qf/Q0**(1/t))-1

if i <= 0.01:
 	imprima = "Real"

else:
	imprima = "Irreal"

print (imprima)

-- OUTPUT:
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:36) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000.00 + 42000.00
Q0=1500.00

i=(Qf/Q0**(1/t))-1

if i <= 0.01:
 	imprima = "Real"

else:
	imprima = "Irreal"

print (i)
print (imprima)

-- OUTPUT:
1030482.0023364745
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:48:46) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000.00 + 42000.00
Q0=1500.00

i=(Qf/Q0**(1/t))-1

if i <= 0.01:
 	imprima = "Real"

else:
	imprima = "Irreal"

print (i)
print (imprima)

-- EXECUTION TIME:
0.133766
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
1030482.0023364745
Irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
1028598.5228068469
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
1010726.321227418
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:01) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000.00 + 42000.00
Q0=1500.00

i=(Qf/Q0**(1/t))-1

if i <= 0.01:
 	imprima = "Real"

else:
	imprima = "Irreal"

print (i)
print (imprima)

-- OUTPUT:
1030482.0023364745
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:12) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000.00 + 42000.00
Q0=1500.00

i=(Qf/Q0**(1/t))-1

if i <= 0.01:
 	imprima = "Real"

else:
	imprima = "Irreal"

print (i)
print (imprima)

-- EXECUTION TIME:
0.102907
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
1030482.0023364745
Irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
1028598.5228068469
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
1010726.321227418
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:10) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000 + 42000
Q0=1500

i=float(Qf/Q0**(1/t))-1

if i <= 0.01:
 	imprima = "Real"

else:
	imprima = "Irreal"

print (i)
print (imprima)

-- OUTPUT:
1030482.0023364745
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:24) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000 + 42000
Q0=1500

i=float(Qf/Q0**(1/t))-1

if i <= 0.01:
 	imprima = "Real"

else:
	imprima = "Irreal"

print (i)
print (imprima)

-- OUTPUT:
1030482.0023364745
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:16) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000 + 42000
Q0=1500
Q=Qf/Q0

i=float(Q**(1/t))-1

if i <= 0.01:
 	imprima = "Real"

else:
	imprima = "Irreal"

print (i)
print (imprima)

-- OUTPUT:
0.009994035818443603
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:54:33) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000 + 42000
Q0=1500
Q=Qf/Q0

i=float(Q**(1/t))-1

if i <= 0.01:
 	imprima = "Real"

else:
	imprima = "Irreal"

print (i)
print (imprima)

-- EXECUTION TIME:
0.153969
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.009994035818443603
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.011648618627555285
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.027639372449055344
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:54:43) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000 + 42000
Q0=1500
Q=Qf/Q0

i=float(Q**(1/t))-1

if i <= 0.01:
 	imprima = "Real"

else:
	imprima = "Irreal"

print (i)
print (imprima)

-- EXECUTION TIME:
0.148478
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.009994035818443603
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.011648618627555285
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.027639372449055344
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:54:46) 
-- CODE:
t=int(input("Quanto tempo em meses? "))
#Digitar as variaveis de entrada
Qf=1000000 + 42000
Q0=1500
Q=Qf/Q0

i=float(Q**(1/t))-1

if i <= 0.01:
 	imprima = "Real"

else:
	imprima = "Irreal"

print (i)
print (imprima)

-- EXECUTION TIME:
0.172648
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.009994035818443603
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.011648618627555285
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.027639372449055344
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
